--- a/facade-service/config/config.yml
+++ b/facade-service/config/config.yml
@@ -4,3 +4,12 @@ http:
   maxHeaderMegabytes: 1
   readTimeout: 5s
   writeTimeout: 10s
+
+postgres:
+  host: localhost
+  port: 5432
+  dbname: smart_loader
+  maxConns: 25
+  minConns: 2
+  maxConnLifetime: 120s
+  maxConnIdleTime: 300s
