--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,36 @@ services:
       smart-loader-net:
         ipv4_address: 172.28.1.3
 
+  facade-service:
+    container_name: facade-service
+    build: ./facade-service
+    restart: on-failure
+    env_file:
+      - .env
+    depends_on:
+      - postgres-smart-loader
+      - nats-smart-loader
+    ports:
+      - ${FACADE_SERVICE_PORT}:9000
+    networks:
+      smart-loader-net:
+        ipv4_address: 172.28.1.4
+
+  loader-service:
+    container_name: loader-service
+    build: ./loader-service
+    restart: on-failure
+    env_file:
+      - .env
+    depends_on:
+      - postgres-smart-loader
+      - nats-smart-loader
+    ports:
+      - ${LOADER_SERVICE_PORT}:9000
+    networks:
+      smart-loader-net:
+        ipv4_address: 172.28.1.5
+
 networks:
   smart-loader-net:
     ipam:
